# dcat-ap-plus

./: .gitignore  .zenodo.json  404.html  CONTRIBUTING.md  README.md  config.public.mk  justfile  mkdocs.yml  project.justfile  pyproject.toml  sitemap.xml  versions.json
.github/workflows/: deploy-docs.yaml  pypi-publish.yaml  test_pages_build.yaml
dev/: index.html  sitemap.xml
dev/about/: index.html
dev/elements/classes/Activity/: index.html
dev/elements/classes/Agent/: index.html
dev/elements/classes/AgenticEntity/: index.html
dev/elements/classes/AnalysisDataset/: index.html
dev/elements/classes/AnalysisSourceData/: index.html
dev/elements/classes/Any/: index.html
dev/elements/classes/Attribution/: index.html
dev/elements/classes/Catalogue/: index.html
dev/elements/classes/CatalogueRecord/: index.html
dev/elements/classes/Checksum/: index.html
dev/elements/classes/ChecksumAlgorithm/: index.html
dev/elements/classes/ClassifierMixin/: index.html
dev/elements/classes/Concept/: index.html
dev/elements/classes/ConceptScheme/: index.html
dev/elements/classes/DataAnalysis/: index.html
dev/elements/classes/DataGeneratingActivity/: index.html
dev/elements/classes/DataService/: index.html
dev/elements/overview/: index.html
dev/schema/: dcat_ap_linkml.yaml  dcat_ap_plus.yaml  index.html
dev/schema/jsonld/: dcat_ap_plus.context.jsonld  dcat_ap_plus.jsonld
dev/schema/jsonschema/: dcat_ap_plus.schema.json
dev/schema/merged-yaml/: dcat_ap_plus.yaml
dev/schema/prefixmap/: dcat_ap_plus.yaml
dev/schema/shacl/: dcat_ap_plus.shacl.ttl
dev/search/: search_index.json
docs/: index.md
docs/schema/: README.md
elements/applicable_legislation/: index.html
elements/carried_out_by/: index.html
elements/description/: index.html
elements/documentation/: index.html
elements/geographical_coverage/: index.html
elements/had_input_activity/: index.html
elements/had_input_entity/: index.html
elements/had_output_entity/: index.html
elements/has_part/: index.html
elements/has_qualitative_attribute/: index.html
elements/has_quantitative_attribute/: index.html
elements/id/: index.html
elements/language/: index.html
elements/modification_date/: index.html
elements/other_identifier/: index.html
elements/part_of/: index.html
elements/publisher/: index.html
elements/rdf_type/: index.html
elements/release_date/: index.html
elements/temporal_coverage/: index.html
elements/title/: index.html
elements/type/: index.html
elements/was_generated_by/: index.html
pr-preview/pr-1/: 404.html  index.html  sitemap.xml
pr-preview/pr-1/about/: index.html
pr-preview/pr-1/schema/: index.html
pr-preview/pr-1/search/: search_index.json
pr-preview/pr-1/versioning/: index.html
project/: README.md
project/jsonld/: dcat_ap_plus.context.jsonld
schema/: dcat_ap_plus.yaml
search/: search_index.json
src/dcat_ap_plus/: dcat_ap_shacl_2_linkml.py
src/dcat_ap_plus/datamodel/: __init__.py
src/dcat_ap_plus/schema/: dcat_ap_linkml.yaml  dcat_ap_plus.yaml
tests/: test_data.py
v0.1.0rc2/: 404.html  sitemap.xml
v0.1.0rc2/elements/overview/: index.html
v0.1.0rc2/schema/: dcat_ap_plus.yaml
v0.1.0rc2/search/: search_index.json
v0.1.0rc2/versioning/: index.html
(+256 files in other folders)
